# vectory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REUSE.toml  pyproject.toml
cake_vectory/: __init__.py  main.py
cake_vectory/commands/: __init__.py  collection.py  health.py  objects.py  schema.py  search.py
cake_vectory/test/: README.md  __init__.py  hybrid_search_error_test.py  hybrid_search_test.py  test_vector.json  test_vector_1024.json  test_vector_1536.json  test_vector_768.json
cake_vectory/utils/: __init__.py  api.py  auth.py  config.py
cake_vectory/utils/api/: __init__.py  client.py  health.py  objects.py  schema.py  search.py
