# SPDX-FileCopyrightText: 2025 Cake AI Technologies, Inc.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cake-vectory"
version = "0.2.0"
description = "Cake CLI tool for interacting with vector databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
vectory = "cake_vectory.main:app"
cake-vectory = "cake_vectory.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["cake_vectory"]
